--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 <h2 id="sec-1">HPACK in Erlang</h2>
 <h3>HTTP/2 Header Encoding</h3>
 <p><small>Joe DeVivo / <a href="http://twitter.com/joedevivo">@joedevivo</a></small></p>
+<p>
+<a href="https://github.com/joedevivo/hpack">hpack</a>
+</p>
 
 </section>
 </section>
